# Helios

./: .clang-format  .gitignore  CMakeLists.txt  README.md
Helios/Core/include/: Camera.hpp  DisplayManager.hpp  Entity.hpp  GameEngine.hpp  Light.hpp  Transformable.hpp  Utils.hpp  game_engine.hpp
Helios/Core/include/model/: Material.hpp  MaterializedMesh.hpp  Mesh.hpp  Model.hpp  PrimitiveMesh.hpp
Helios/Core/include/renderer/: EntityRenderer.hpp  LightRenderer.hpp  MasterRenderer.hpp  light_renderer.hpp
Helios/Core/include/shader/: EntityShader.hpp  LightShader.hpp  ShaderProgram.hpp  entity_shader.hpp
Helios/Core/include/texture/: Texture.hpp  TextureManager.hpp  texture.hpp
Helios/Core/src/: Camera.cpp  DisplayManager.cpp  GameEngine.cpp  Utils.cpp  main.cpp
Helios/Core/src/model/: Mesh.cpp  Model.cpp  PrimitiveMesh.cpp
Helios/Core/src/renderer/: EntityRenderer.cpp  MasterRenderer.cpp
Helios/Core/src/shader/: ShaderProgram.cpp
Helios/Core/src/texture/: TextureManager.cpp
examples/Sandbox/: main.cpp
include/: .utils.hpp.swp  entity.hpp  light.hpp  transformable.hpp  utils.hpp
include/Helios/Core/: Camera.hpp  DisplayManager.hpp  Entity.hpp  GameEngine.hpp  Light.hpp  Transformable.hpp  Utils.hpp
include/Helios/Core/model/: Material.hpp  MaterializedMesh.hpp  Mesh.hpp  Model.hpp  PrimitiveMesh.hpp
include/Helios/Core/renderer/: EntityRenderer.hpp  LightRenderer.hpp  MasterRenderer.hpp
include/Helios/Core/shader/: EntityShader.hpp  LightShader.hpp  ShaderProgram.hpp
include/Helios/Core/texture/: Texture.hpp  TextureManager.hpp
include/shader/: light_shader.hpp
lib/common/include/assimp/: scene.h
project/include/: camera.hpp  display_manager.hpp  game_engine.hpp  light.hpp  utils.hpp
project/include/entity/: abstract_entity.hpp  entity.hpp
project/include/model/: material.hpp  materialized_mesh.hpp  materialized_model.hpp  mesh.hpp  model.hpp  primitive.hpp  primitive_mesh.hpp  shape.hpp
project/include/renderer/: entity_renderer.hpp  light_renderer.hpp  master_renderer.hpp
project/include/shader/: entity_shader.hpp  light_shader.hpp  shader_program.hpp
project/include/texture/: texture.hpp  texture_manager.hpp
project/src/: camera.cpp  display_manager.cpp  main.cpp  utils.cpp
project/src/model/: mesh.cpp  model.cpp  primitive.cpp  primitive_mesh.cpp  shape.cpp
project/src/renderer/: entity_renderer.cpp  master_renderer.cpp
project/src/shader/: shader_program.cpp
project/src/texture/: texture.cpp  texture_manager.cpp
res/shaders/: entity_shader.frag  entity_shader.vert  light_shader.frag  light_shader.vert  outline_shader.frag  outline_shader.vert
src/: .utils.cpp.swp
src/Helios/Core/: Camera.cpp  DisplayManager.cpp  GameEngine.cpp  Utils.cpp
src/Helios/Core/model/: Mesh.cpp  Model.cpp  PrimitiveMesh.cpp
src/Helios/Core/renderer/: EntityRenderer.cpp  MasterRenderer.cpp
src/Helios/Core/shader/: ShaderProgram.cpp
src/Helios/Core/texture/: TextureManager.cpp
src/texture/: texture_manager.cpp
